# numba-inspector

./: README.md  pyproject.toml
numba_inspector/: __init__.py  ipython_magic.py
numba_inspector/frontend/: annotate.py
