[tool.poetry]
name = "numba-inspector"
version = "0.0.0"
description = "Visualize and Debug Numba compiled code in Jupyter"
authors = ["Matthew Murray <matthewmurray711@gmail.com>"]
readme = "README.md"
packages = [{include = "numba_inspector"}]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.57.1"
pygments = "^2.15.1"
notebook = "^6.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
